force-app/main/default/objects/Professional_Development__c/Professional_Development__c.object-meta.xml
<CustomObject>
    <label>Professional Development</label>
    <nameField>
        <label>Course/Qualification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Professional Development</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>