force-app/main/default/objects/Professional_Development__c/fields/Admin__c.field-meta.xml
<CustomField>
    <fullName>Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>HR Manager, Accountant, Personnel Coordinator, Admin Support, Stores</description>
    <label>Admin</label>
    <type>Checkbox</type>
</CustomField>