force-app/main/default/objects/Professional_Development__c/fields/Admin_NHVAS__c.field-meta.xml
<CustomField>
    <fullName>Admin_NHVAS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Business Manager, Administration</description>
    <label>Admin NHVAS</label>
    <type>Checkbox</type>
</CustomField>