force-app/main/default/objects/Professional_Development__c/fields/Camp_Attendant__c.field-meta.xml
<CustomField>
    <fullName>Camp_Attendant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Camp Attendant</label>
    <type>Checkbox</type>
</CustomField>