force-app/main/default/objects/Professional_Development__c/fields/Camp_Cook__c.field-meta.xml
<CustomField>
    <fullName>Camp_Cook__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Camp Cook</label>
    <type>Checkbox</type>
</CustomField>