force-app/main/default/objects/Professional_Development__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>Induction - Client</fullName>
            </value>
            <value>
                <fullName>Licencing</fullName>
            </value>
            <value>
                <fullName>Qualification</fullName>
            </value>
            <value>
                <fullName>Recruit</fullName>
            </value>
            <value>
                <fullName>Training - WD</fullName>
            </value>
            <value>
                <fullName>Training - RTO</fullName>
            </value>
            <value>
                <fullName>Training - WD Online</fullName>
            </value>
            <value>
                <fullName>Induction - WD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>