force-app/main/default/objects/Professional_Development__c/fields/Compulsory_To_Unit__c.field-meta.xml
<CustomField>
    <fullName>Compulsory_To_Unit__c</fullName>
    <label>Compulsory To Dept</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Well Servicing</fullName>
            </value>
            <value>
                <fullName>Remote Camp</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
            <value>
                <fullName>Field Safety</fullName>
            </value>
            <value>
                <fullName>Field Personnel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>