force-app/main/default/objects/Professional_Development__c/fields/COO__c.field-meta.xml
<CustomField>
    <fullName>COO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>COO</label>
    <type>Checkbox</type>
</CustomField>