force-app/main/default/objects/Professional_Development__c/fields/Course_Description__c.field-meta.xml
<CustomField>
    <fullName>Course_Description__c</fullName>
    <label>Course Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>