force-app/main/default/objects/Professional_Development__c/fields/Days_until_renewal_is_required__c.field-meta.xml
<CustomField>
    <fullName>Days_until_renewal_is_required__c</fullName>
    <inlineHelpText>Number of days until it needs to be renewed. 
EG: 1 year = 365 Days</inlineHelpText>
    <label>Days until renewal is required</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>