force-app/main/default/objects/Professional_Development__c/fields/Depot_Manager__c.field-meta.xml
<CustomField>
    <fullName>Depot_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Depot Manager</label>
    <type>Checkbox</type>
</CustomField>