force-app/main/default/objects/Professional_Development__c/fields/Derrickman__c.field-meta.xml
<CustomField>
    <fullName>Derrickman__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Derrickman</label>
    <type>Checkbox</type>
</CustomField>