force-app/main/default/objects/Professional_Development__c/fields/Driller__c.field-meta.xml
<CustomField>
    <fullName>Driller__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Driller</label>
    <type>Checkbox</type>
</CustomField>