force-app/main/default/objects/Professional_Development__c/fields/Expiry_Status__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Status__c</fullName>
    <label>Expiry Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Does not expire</fullName>
            </value>
            <value>
                <fullName>Expire and clone</fullName>
            </value>
            <value>
                <fullName>Expire and set for refresh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>