force-app/main/default/objects/Professional_Development__c/fields/Field_Safety__c.field-meta.xml
<CustomField>
    <fullName>Field_Safety__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Field Safety</label>
    <type>Checkbox</type>
</CustomField>