force-app/main/default/objects/Professional_Development__c/fields/Floorhand__c.field-meta.xml
<CustomField>
    <fullName>Floorhand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Floorhand</label>
    <type>Checkbox</type>
</CustomField>