force-app/main/default/objects/Professional_Development__c/fields/HSEQ__c.field-meta.xml
<CustomField>
    <fullName>HSEQ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HSEQ Manager</label>
    <type>Checkbox</type>
</CustomField>