force-app/main/default/objects/Professional_Development__c/fields/Identification_Number__c.field-meta.xml
<CustomField>
    <fullName>Identification_Number__c</fullName>
    <inlineHelpText>Course ID number 
EG: BPO IWCF Supervisor Ticket = WIP1</inlineHelpText>
    <label>Identification Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>