force-app/main/default/objects/Professional_Development__c/fields/Lead_Floor__c.field-meta.xml
<CustomField>
    <fullName>Lead_Floor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Floor</label>
    <type>Checkbox</type>
</CustomField>