force-app/main/default/objects/Professional_Development__c/fields/Leasehand__c.field-meta.xml
<CustomField>
    <fullName>Leasehand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Leasehand</label>
    <type>Checkbox</type>
</CustomField>