force-app/main/default/objects/Professional_Development__c/fields/Managing_Director__c.field-meta.xml
<CustomField>
    <fullName>Managing_Director__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Managing Director</label>
    <type>Checkbox</type>
</CustomField>