force-app/main/default/objects/Professional_Development__c/fields/Mechanics__c.field-meta.xml
<CustomField>
    <fullName>Mechanics__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mechanics</label>
    <type>Checkbox</type>
</CustomField>