force-app/main/default/objects/Professional_Development__c/fields/Number_Days_for_Expiry_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Number_Days_for_Expiry_Reminder__c</fullName>
    <label>Number Days for Expiry Reminder</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>