force-app/main/default/objects/Professional_Development__c/fields/Ops_Sup__c.field-meta.xml
<CustomField>
    <fullName>Ops_Sup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ops Sup</label>
    <type>Checkbox</type>
</CustomField>