force-app/main/default/objects/Professional_Development__c/fields/Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Name__c</fullName>
    <defaultValue>$RecordType.Name</defaultValue>
    <label>Record Type Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>