force-app/main/default/objects/Professional_Development__c/fields/Required_By__c.field-meta.xml
<CustomField>
    <fullName>Required_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Who requires that this be completed</inlineHelpText>
    <label>Required By</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Client</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Courses_Qualifications</relationshipName>
    <type>Lookup</type>
</CustomField>