force-app/main/default/objects/Professional_Development__c/fields/Required_By_Unit__c.field-meta.xml
<CustomField>
    <fullName>Required_By_Unit__c</fullName>
    <label>Required By Unit</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Units</valueSetName>
    </valueSet>
</CustomField>