force-app/main/default/objects/Professional_Development__c/fields/Requirement_Type__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Type__c</fullName>
    <label>Requirement Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>As per Matrix</fullName>
            </value>
            <value>
                <fullName>Mandatory By Position</fullName>
            </value>
            <value>
                <fullName>WSQ - Core</fullName>
            </value>
            <value>
                <fullName>WSQ - Elective</fullName>
            </value>
            <value>
                <fullName>Manager to Request</fullName>
            </value>
            <value>
                <fullName>Mandatory Client Induction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>