force-app/main/default/objects/Professional_Development__c/fields/Requires_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Requires_Renewal__c</fullName>
    <label>Requires Renewal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>