force-app/main/default/objects/Professional_Development__c/fields/Rig_Manager__c.field-meta.xml
<CustomField>
    <fullName>Rig_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rig Manager</label>
    <type>Checkbox</type>
</CustomField>