force-app/main/default/objects/Professional_Development__c/fields/Stores__c.field-meta.xml
<CustomField>
    <fullName>Stores__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stores</label>
    <type>Checkbox</type>
</CustomField>