force-app/main/default/objects/Professional_Development__c/fields/Training_Provider__c.field-meta.xml
<CustomField>
    <fullName>Training_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Provider</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Training Provider</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Professional Development (Training Provider)</relationshipLabel>
    <relationshipName>Courses</relationshipName>
    <type>Lookup</type>
</CustomField>