force-app/main/default/objects/Professional_Development__c/fields/Transport_Manager__c.field-meta.xml
<CustomField>
    <fullName>Transport_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transport Manager</label>
    <type>Checkbox</type>
</CustomField>