force-app/main/default/objects/Professional_Development__c/fields/Truck_Driver__c.field-meta.xml
<CustomField>
    <fullName>Truck_Driver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Truck Driver</label>
    <type>Checkbox</type>
</CustomField>