force-app/main/default/objects/Professional_Development__c/fields/Unit_Specific__c.field-meta.xml
<CustomField>
    <fullName>Unit_Specific__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This may be a compulsory requirement for some/all positions depending on the location of the WD Unit eg.  Santos NSW or Santos Qld</inlineHelpText>
    <label>Unit Specific</label>
    <type>Checkbox</type>
</CustomField>