force-app/main/default/objects/Professional_Development__c/fields/Welder__c.field-meta.xml
<CustomField>
    <fullName>Welder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Welder</label>
    <type>Checkbox</type>
</CustomField>