force-app/main/default/objects/Professional_Development__c/fields/Welding_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Welding_Supervisor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Welding Supervisor</label>
    <type>Checkbox</type>
</CustomField>