force-app/main/default/objects/Professional_Development__c/fields/Yard_Assistant__c.field-meta.xml
<CustomField>
    <fullName>Yard_Assistant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Yard Assistant</label>
    <type>Checkbox</type>
</CustomField>