force-app/main/default/objects/Professional_Development__c/recordTypes/Competencies.recordType-meta.xml
<RecordType>
    <fullName>Competencies</fullName>
    <active>true</active>
    <label>Competencies</label>
</RecordType>