force-app/main/default/objects/Professional_Development__c/recordTypes/Inductions.recordType-meta.xml
<RecordType>
    <fullName>Inductions</fullName>
    <active>true</active>
    <label>Inductions</label>
</RecordType>