force-app/main/default/objects/Professional_Development__c/recordTypes/Well_Servicing.recordType-meta.xml
<RecordType>
    <fullName>Well_Servicing</fullName>
    <active>true</active>
    <label>Well Servicing</label>
</RecordType>