force-app/main/default/objects/Professional_Development__c/listViews/All_Professional_Development.listView-meta.xml
<ListView>
    <fullName>All_Professional_Development</fullName>
    <columns>RECORDTYPE</columns>
    <columns>Record_Type_Name__c</columns>
    <columns>NAME</columns>
    <columns>Requirement_Type__c</columns>
    <columns>Required_By__c</columns>
    <columns>Requires_Renewal__c</columns>
    <columns>Days_until_renewal_is_required__c</columns>
    <columns>Number_Days_for_Expiry_Reminder__c</columns>
    <columns>Inactive__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>HR</group>
        <group>Safety</group>
    </sharedTo>
</ListView>