force-app/main/default/objects/Professional_Development__c/listViews/Required_By_Camps.listView-meta.xml
<ListView>
    <fullName>Required_By_Camps</fullName>
    <columns>RECORDTYPE</columns>
    <columns>Record_Type_Name__c</columns>
    <columns>NAME</columns>
    <columns>Requirement_Type__c</columns>
    <columns>Required_By__c</columns>
    <columns>Requires_Renewal__c</columns>
    <columns>Required_By_Unit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Inactive__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Required_By_Unit__c</field>
        <operation>includes</operation>
        <value>Camp 01,Camp 03,Camp 04,Camp 06,Camp 07,Camp 08,Camp 09,Camp 10</value>
    </filters>
    <label>Required By | Camps</label>
</ListView>