force-app/main/default/objects/Professional_Development__c/listViews/Required_By_Santos.listView-meta.xml
<ListView>
    <fullName>Required_By_Santos</fullName>
    <columns>RECORDTYPE</columns>
    <columns>Record_Type_Name__c</columns>
    <columns>NAME</columns>
    <columns>Requirement_Type__c</columns>
    <columns>Required_By__c</columns>
    <columns>Requires_Renewal__c</columns>
    <columns>Days_until_renewal_is_required__c</columns>
    <columns>Number_Days_for_Expiry_Reminder__c</columns>
    <columns>Required_By_Unit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Required_By__c</field>
        <operation>contains</operation>
        <value>Santos</value>
    </filters>
    <filters>
        <field>Inactive__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Required By | Santos</label>
</ListView>